Final content for kmom01

--- a/content/redovisning/01_kmom01.md
+++ b/content/redovisning/01_kmom01.md
@@ -4,3 +4,25 @@ Redovisning kmom01
 =========================
 
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/01_kmom01.md`.
+
+**Är du sedan tidigare van att jobba i ramverk för att bygga webbplatser?**
+
+Nej, det är jag inte. Jag kikade ytligt på Django för två år sedan, men jag har bara vaga minnen av det.
+
+**Det blev en del nya verktyg och tekniker i labbmiljön och för att jobba med redovisa sidan, är du bekant med några av dem sedan tidigare?**
+
+Nej, det är jag inte. Allt (inklusive Markdown, Make, Git och Composer) var nytt för mig. Jag har länge lekt med tanken att bekanta mig med Git men det har aldrig blivit av. I somras gick jag kursen [Publicering på Internet](https://www.du.se/sv/Utbildning/kurser/kurs/?code=IK1061) som avslutades av ett projektarbete i grupp. Gruppmedlemmarna arbetade parallellt med projektet (en enkel, statisk webbplats åt en ideell organisation) och det var ofta svårt att veta vilken version som gällde. Då blev det tydligt för mig hur pass viktigt det är att arbeta utifrån en versionshanterare.
+
+**Har du några förutfattade meningar, eller kanske en etablerad övertygelse, inom design och användbarhet för webben?**
+
+I somras bläddrade jag igenom Googles handbok för sökmotoroptimering som lägger stor fokus på användbarhet. Webbplatsen ska vara lättnavigerad, texterna läsbara (lagom stora fonter och tillräckligt med kontrast). Man ska vara sparsam med understrukna ord för de kan lätt misstas för länkar etc. Det gäller att tänka på skärmläsarna och på folk som inte har samma förutsättningar. Det mesta verkar som sunt förnuft.
+
+Jag har tyvärr inga djupgående tankar om design.
+
+**Hur kändes det att styla webbplatsen med CSS? Gick det bra?**
+
+Med tanke på att stylandet fortsätter i kmom02 och kmom03 siktade jag inte alltför högt utan hade en lagom bekväm ambitionsnivå. Så inom den ramen gick det ganska bra att style webbplatsen med CSS.
+
+**Vilken är din TIL för detta kmom?**
+
+Jag har flera. Förutom labbmiljöns alla verktyg var terminalkommandona ```rsync``` och ```chmod 755``` nytt för mig. Nu förstår jag den binära logiken som representerar filrättigheterna och som står bakom siffrorna efter ```chmod```. Jag visste inte att det går att specifiera inputtype i CSS:en (```input[type=text] { border: 1px solid #999; }```) och att man kan komma fram till samma output med hjälp av ```outline``` och ```box-sizing: border-box;```. En annan sak som kan nämnas är hur man kan experimentera med webbläsarens Inspect element och det går att kopiera den färdiga koden som man har prövat sig fram till.
