Adding some style

--- a/content/redovisning/01_kmom01.md
+++ b/content/redovisning/01_kmom01.md
@@ -11,7 +11,7 @@ Nej, det är jag inte. Jag kikade ytligt på Django för två år sedan, men jag
 
 **Det blev en del nya verktyg och tekniker i labbmiljön och för att jobba med redovisa sidan, är du bekant med några av dem sedan tidigare?**
 
-Nej, det är jag inte. Allt (inklusive Markdown, Make, Git och Composer) var nytt för mig. Jag har länge lekt med tanken att bekanta mig med Git men det har aldrig blivit av. I somras gick jag kursen [Publicering på Internet](https://www.du.se/sv/Utbildning/kurser/kurs/?code=IK1061) som avslutades av ett projektarbete i grupp. Gruppmedlemmarna arbetade parallellt med projektet (en enkel, statisk webbplats åt en ideell organisation) och det var ofta svårt att veta vilken version som gällde. Då blev det tydligt för mig hur pass viktigt det är att arbeta utifrån en versionshanterare.
+Nej, det är jag inte. Allt (inklusive Markdown, Pigments, Make, Git och Composer) var nytt för mig. Jag har länge lekt med tanken att bekanta mig med Git men det har aldrig blivit av. I somras gick jag kursen [Publicering på Internet](https://www.du.se/sv/Utbildning/kurser/kurs/?code=IK1061) som avslutades av ett projektarbete i grupp. Gruppmedlemmarna arbetade parallellt med projektet (en enkel, statisk webbplats åt en ideell organisation) och det var ofta svårt att veta vilken version som gällde. Då blev det tydligt för mig hur pass viktigt det är att arbeta utifrån en versionshanterare.
 
 **Har du några förutfattade meningar, eller kanske en etablerad övertygelse, inom design och användbarhet för webben?**
 
@@ -21,7 +21,7 @@ Jag har tyvärr inga djupgående tankar om design.
 
 **Hur kändes det att styla webbplatsen med CSS? Gick det bra?**
 
-Med tanke på att stylandet fortsätter i kmom02 och kmom03 siktade jag inte alltför högt utan hade en lagom bekväm ambitionsnivå. Så inom den ramen gick det ganska bra att style webbplatsen med CSS.
+Med tanke på att stylandet fortsätter i kmom02 och kmom03 (och med tanke på att jag var under lite tidspress mot slutet) siktade jag inte alltför högt. Jag har alltså inte hunnit styla allt jag velat men jag ska åtgärda det i kommande kursmoment.
 
 **Vilken är din TIL för detta kmom?**
 
