First commit for kmom03

--- a/content/redovisning/03_kmom03.md
+++ b/content/redovisning/03_kmom03.md
@@ -4,3 +4,31 @@ Redovisning kmom03
 =========================
 
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/03_kmom03.md`.
+
+**Hur känns det att vara styrd till ett vertikalt grid, hämmande eller stödjande?**
+
+När jag började med kmom03 plockade jag bort allt från min stilmall som margin, float och width heter för att sedan styla hela webbplatsen med gridet. Efter ett flertal misslyckade försök blev jag upplyst på gitterchatten att det bara är regionerna som ska mappa gridet och resten ska tas hand om med float. Jag har uppenbarligen missförstått en av vidoerna. Om sanningen ska fram kändes det väldigt frustrerande. Om jag hade vetat vad som väntar i kmom03 hade jag troligen skrivit index.md på ett annat sätt i kmom01 (kanske med några sidebars och med mer innehåll). Men nu gäller det att styla och inte att ändra markupen. Allt som allt känns gridet snarare ett hinder men jag förstår att det kan vara till stor hjälp under andra omständigheter.
+
+**Hur känns det att jobba med ett typografiskt horisontellt/baseline grid, ser du någon poäng med det?**
+
+Jag lyckades med att få vartannat element i min unordered list att hamna på gridet genom att räkna ut hur padding och margin ska samverka. Så vitt jag förstår är det bäst att arbeta med outline eftersom border kan ställa till det. Men när jag har outline istället för border blir det svårt att använda sig av border-radius. Det känns något hämmande att man är tvingad till ett horisontellt grid på 24px, för det innebär att man inte kan ändra på radavståndet som man vill. Jag ville ha fontstorlek på 20px och radavstånd på 1.5 men då får man ett annat magiskt nummer (30px) som inte är tillgängligt i ramverket här.
+
+**Berätta om hur du valde typsnitt till din webbplats.**
+
+På webbplatserna jag hittills har byggt har jag alltid nöjt mig med att använda mig av webbsäkra fonter (som Calibri, Courier, Verdana etc) som de flesta webbläsare klarar av. Nu har jag dock börjat leka runt med Google Fonts. Till sist valde jag ett serif-typsnitt (Libre Baskerville) för rubrikerna och ett sans-serif (Raleway) för brödtexten för att markera skillnaden mellan de två texttyperna. Jag upplever Raleways siffror som ganska speciella för treans, femmans och nians nedersta hake dyker under baslinjen medan sexan och åttan sticker ut åt andra hållet. För läsbarhetens skull valde jag Medium 500 för defaultvärdets (Regular 400) linjer verkade alldeles för tunna. I Emils föreläsning fick vi tipset att se till att "e" och "c" går att urskilja. För mig var det också viktigt att versalen "I" (stort "i") och gemenen "l" inte ser ut på samma sätt vilket de gör när man jobbar med Oswald. En annan sak som jag tycker är viktigt att vara uppmärksam på är att bokstavskombinationen "rn" går att skilja från bokstaven "m". Det här kan åstadkommas med ett Monospace-typsnitt, men jag lät bli att välja något sådant för det verkar gammaldags och skrivmaskinsaktigt.
+
+**Har du jobbat med liknande gridbaserade layouttekniker sedan tidigare?**
+
+I somras kollade jag på några Bootstrap-tutorials på YouTube, men där tog det slut. Jag har alltså hört talas om gridbaserade layouttekniker men jag har inte jobbat med dem.
+
+**Hur känns det att jobba med LESS och moduler? Lyckas du återanvända moduler mellan teman för kmom02 och kmom03?**
+
+Det fanns en hel del kod som jag kunde återanvända mellan kmom02 och kmom03. Det känns bra att ha tillgång till all den funktionalitet (variabler, mixins mm) som LESS erbjuder men samtidigt är det lite överväldigande att arbeta med ett projekt som innehåller över 17000 filer och över 2500 kataloger. För mig skulle det verka mer motiverande att djupdyka i programmering med LESS än att behöva hålla koll på så pass många olika teknologier (font awesome, desinax, md, git, make etc), även om jag vet att allt det här är väldigt bra att kunna.
+
+**Hur gick det med din responsivitet för webbplatsen?**
+
+Jag har följt de 22 videorna till punkt och pricka så jag har all responsiv funktionalitet implementerad som följer från dem.
+
+**Vilken är din TIL för detta kmom?**
+
+Det här kursmomentet har tagit mig in på helt nya områden. Både flex och grid är i stort sett nytt för mig. Jag har också tagit till mig goda tips om typografi och användarvänlighet, inklusive det rekommenderade radavståndet, det magiska numret (radhöjd * fontstorlek), det rekommenderade antalet tecken per rad (60-90) mm. Det var också kul att se hur man kan importera fonter från Google och FontSquirrel, även om jag troligen oftast kommer att nöja mig med det som finns inbyggt i webbläsarna.
