First commit for kmom04

--- a/content/redovisning/04_kmom04.md
+++ b/content/redovisning/04_kmom04.md
@@ -4,3 +4,29 @@ Redovisning kmom04
 =========================
 
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/04_kmom04.md`.
+
+**Kommentera kort om skrivuppgiften, någon som är värt att nämna från arbetet med den?**
+
+Arbetet med skrivuppgiften var mycket lärorikt och fick mig att tänka mera strukturerat kring färganvändande. Jag blev uppmärksammare på accentfärger och på sambandet mellan kontrast och fontstorlek. Det var mycket instruktivt att lista webbplatsernas färger i kromatisk ordning för det är inte alltid lätt (mest på grund av bilderna) att vid första ögonkastet göra sig en uppfattning om vilka färger färgpaletten består av. Att hitta bra kriterier och komma fram till ett slutgiltigt urval visade sig också vara svårare än jag hade trott.
+
+**Berätta kort om din tanke bakom respektive teman, hur tolkade du “minimalistisk”, “colorful” och “dark”. Vilket färgschema valde du till respektive tema och hur valde du att använda färgerna (mer eller mindre eller lika mycket av alla färger)?**
+
+Jag tolkade det [minimalistiska](redovisning/kmom04?style=04_minimalistic) temat så att det gäller att ta bort all onödig styling som inte har en klar funktion. Jag valde därför ett akromatiskt färgschema med en övervägande ljus ton utan störande element. Det [mörka](redovisning/kmom04?style=04_dark) temat är mörkgrått med inslag av svart och blått samt med ljus text. Det [färgglada](redovisning/kmom04?style=04_colorful) temat använder sig av ovanliga typsnitt, livliga färger och väcker en lekfull stämning men är samtidigt inte optimalt ur ett läsbarhetsperspektiv. Under arbetet med det färgglada temat försökte jag hitta passande färger med hjälp av det tetradiska temat på [Color Scheme Designer](https://colorschemedesigner.com/csd-3.5/).
+
+Detta är min stil för [kmom04](redovisning/kmom04?style=kmom04) som är i princip identisk med den för kmom03 (bortsett från lite extra styling för sidebarens länkar och för hovring).
+
+**Valde du att jobba med accentfärg och isåfall hur?**
+
+I det färgglada temat satte jag sidebarens text till lila. En ljusare variant av samma färg återfinns som bakgrundsfärg i headern. Förutom detta har jag inte jobbat med accentfärger.
+
+**Hur tänkte du kring valet av typografi?**
+
+För det minimalistiska temat valde jag vanliga typsnitt (Verdana, Arial för brödtexten, Times New Roman för rubrikerna) som finns inbyggda i (så vitt jag vet) alla webbläsare. Sådana typsnitt fångar inte användarens uppmärksamhet och påverkar inte laddningstiden heller. Typsnitten för de andra två temana hämtade jag från Google Fonts. Det färgglada temats lekfulla stämning är uttryckt med handstilsliknande typsnitt (Permanent marker för rubrikerna och Kalam för resten) med cursive som fallback. Det mörka temats rubriker är satta till ett display typeface (Patua One) medan brödtexten är satt till Ubuntu Mono.
+
+**Berätta om din kodstruktur av teman, jobbade du med bastema och hur löste du anpassningarna till de olika temana?**
+
+Jag strukturerade koden enligt tipset vi fick på Emils föreläsning, så jag har variablerna i filerna minimalistic.less, colorful.less och dark.less som i sin tur finns i katalogen module. Jag importerar dem längst ner i 04_minimalistic.less, 04_colorful.less och 04_dark.less (som egentligen är duplikater på kmom04.less) för att inte skriva över variablerna.
+
+**Vilken är din TIL för detta kmom?**
+
+Jag har flera. Bland annat kan jag nämna det tetradiska och analoga färgschemat. Display typeface, ICC-profil, hsl, hsv, tint, shade och tone samt färgpsykologi var också nytt för mig. Jag tar också med mig hur snabbt det går att skapa nya teman med hjälp av LESS och en väl genomtänkt kodstruktur.
