First commit for kmom05

--- a/content/redovisning/05_kmom05.md
+++ b/content/redovisning/05_kmom05.md
@@ -4,3 +4,23 @@ Redovisning kmom05
 =========================
 
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/05_kmom05.md`.
+
+**Berätta kort om erfarenheterna med din undersökning av webbplatsers laddningstid och vad du kom fram till.**
+
+I rapporten om laddningstider jämförde jag [BBC](https://www.bbc.com/), [NRK](https://www.nrk.no/) och [DR](https://www.dr.dk/) och kom fram till att DR presterade betydligt sämre än de andra två webbplatserna. Detta beror delvis på att DR skickar onödigt mycket data till klienten samt att DR är sämst på att hantera bilder. Allt detta leder naturligtvis till längre laddningstider men kan inte förklara de extremt låga PSI-värdena helt och hållet. Under arbetet med rapporten märkte jag att PSI-värdet för en och samma webbplats kan variera enormt mycket även när det mäts inom loppet av en enda minut.
+
+**Har du några funderingar kring Cimage och dess nytta och features? Vilka bildverktyg använder du själv normalt sett?**
+
+Det händer inte ofta att jag måste redigera bilder och då brukar jag nöja mig med Windows Paint. Jag har också arbetat med GIMP och [draw.io](https://www.draw.io/ ) någon enstaka gång, men det är verktyg som jag hittills inte behövt. Jag har väldigt positiv erfarenhet av CImage, för det är ett mycket kraftfullt verktyg med en lättläst och välformulerad dokumentation. Det är kul att man kan ändra bildkvalitet och därmed radikalt minska filstorleken. Jag märkte ingen skillnad mellan originalen och de manipulerade bilderna innan kvaliteten sjönk under 30-40. Jag har planer på några hobbyprojekt som jag vill implementera när jag får lite tid över och jag är säker på att jag ska använda mig av CImage.
+
+**Hur gick det att jobba med modulen @desinax/figure och hur är din syn på modulen?**
+
+Det gick bra att använda mig av de inbyggda klasserna left, center och right.
+
+**Vad är din egen allmänna uppfattning kring bilder för webben, nedladdningstider, responsiva bilder och allmänt kring bildbehandling för webben?**
+
+När det gäller tröga webbplatser har jag antagligen högre smärtgränser än de flesta, vilket beror på att jag länge jobbat på väldigt långsamma datorer och är van vid att vänta. Hittills har jag inte funderat särskilt mycket över bildbehandling för webben. Innan jag började plugga IT ändrade jag väldigt sällan på webbläsarens storlek, vilket jag ofta gör nu på diverse webbplatser för att testa hur innehållet beter sig. Nu förstår jag vilken roll bilder spelar för laddningstid, SEO och UX, så jag ska nog försöka förbättra webbplatserna jag hittills har skapat utifrån detta.
+
+**Vilken är din TIL för detta kmom?**
+
+Det jag kan lyfta fram som viktigast i kmom05 är PSI och CImage. Lossy vs lossless format, WebP, throttling, HTML-taggen picture, SPA var också nytt för mig. Dessutom var även kursbokens kapitel om Imagery tankeväckande och nyttigt.
