First commit for kmom06

--- a/content/redovisning/06_kmom06.md
+++ b/content/redovisning/06_kmom06.md
@@ -4,3 +4,25 @@ Redovisning kmom06
 =========================
 
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/06_kmom06.md`.
+
+**Hur känns det att tänka i termer av designelement och designprinciper?**
+
+Genom att välja ut ett par principer som ska prägla webbplatsen sätter man samtidigt upp en målsättning som ger en klar ram åt projektet. Det är alltså lättare att tänka strukturerat kring design om man medvetet använder sig av elementen och tar hänsyn till och principerna.
+
+**Finns det något speciellt du vill lyfta fram från uppgiften “Utvärdera designprinciper som webbplatser använder sig av”. Vad tar du med dig från den uppgiften?**
+
+Jag tror att uppgiften har gett mig en djupare förståelse för hur användarens ögon kan guidas på en webbplats. Jag har också sett flera exempel på att subtila och milda designelement är lämpligare att framkalla den önskvärda effekten hos besökaren än storslagna visualiseringar. Genom att ha diskuterat webbplatserna med ett antal personer som inte har någon erfarenhet av vare sig webbdesign eller programmering har jag förstått att vissa effekter vars budskap var uppenbart för mig och antagligen för de som skapat webbplatserna är långt ifrån självklara för en hel del internetanvändare. Man ska alltså vara försiktig med vad man tar för givet när man arbetar med sin design.
+
+**Berätta fritt om arbetet med dina teman som bygger på designelement och designprinciper, hur gick det att jobba med designen på det sättet?**
+
+Arbetet med de båda temana började med att jag valde ut ett par tongivande bakgrundsmönster som kan stå för grund när det gäller webbplatsens övriga design. Temat med designelement är byggt kring en ljus och en mörk textur som kompletteras med footerns mörkblåa mönster. Vissa html-element är vridna ur läge med hjälp av ```transform: rotate();``` och är följaktligen lite sneda.
+
+Temat med designprinciper präglas mest av den rörliga bakgrunden och skuggorna samt till viss del även av genomskinlighet, animeringar mm. I båda temana experimenterade jag mycket med CSS (gradients, animeringar, skuggor, bakgrunder mm). Jag valde också olika typsnitt för varje tema.
+
+**Har du en uppfattning om “the final touch” och vad det kan vara i sammanhanget webbdesign?**
+
+För mig innebär begreppet att man ska dubbelkolla att (1) man har lyckats förverkliga sina målsättningar och att (2) man inte oavsiktligt har brutit mot några designprinciper under arbetets gång.
+
+**Vilken är din TIL för detta kmom?**
+
+Jag har fått en bättre förståelse för vissa byggstenar av CSS (särskilt gradients, transforms, skuggor och animeringar). Det jag tar med mig från kursmomentet är att det är relativt enkelt att guida besökarens ögon på webbplatsen och att det lönar sig om eye tracking ingår i planeringen i själva början.
