Adding two reports and a redovisningstext for kmom10

--- a/content/redovisning/10_kmom10.md
+++ b/content/redovisning/10_kmom10.md
@@ -4,3 +4,61 @@ Redovisning kmom10
 =========================
 
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/10_kmom10.md`.
+
+## Krav 1: Rapport om aktuell webbplatsdesign
+
+I den här rapporten analyserade jag fyra webbplatser som presenterar världens fyra högst rankade firmor inom Web Development enligt [IT FIRMS](https://www.itfirms.co/top-web-development-companies/). Trots att webbplatserna som ingick i urvalet hade väldigt olika välkomstsidor gick det att identifiera ett antal gemensammma punkter. Det är ganska vanligt med CSS-övergångar, dvs att sidorna glider in i varandra medan färgövergångar med CSS-gradients är mycket mer sällsynta än vad jag hade förväntat mig. Det verkar vara standard att både headern är footern spänner över hela bredden och att footern aldrig har position: fixed; medan headern oftast har det. När det gäller spaningar in i framtiden kan man anta att det blir allt vanligare att navbaren finns dold under hamburgarmenyn på alla skärmstorlekar (alltså inklusive desktop). En annan trend man kan iaktta är att många webbplatser sparar på krutet och låter bli att skryta med de senaste trixen på välkomstsidan. I stället så antyder de med hjälp av subtila signaler att det är värt att skrolla ner och läsa vidare.
+
+## Krav 2: Valfri analys inom design och webbplatser
+
+I den här rapporten analyserade jag [De tre tenorernas](https://sv.wikipedia.org/wiki/De_tre_tenorerna) webbplatser. I undersökningen valde jag att fokusera på de designelement som finns beskrivna i läsanvisningarna till kmom06: [Visual literacy](https://dbwebb.se/article/vl.pdf). När jag bestämde mig för vilka webbplatser jag skulle undersöka utgick jag ifrån antagandet att webbplatser som tillhör en sådan här homogen grupp (världskända äldre tenorer med rötter i Sydeuropa) säkerligen uppvisar ett antal gemensamma drag när det gäller upplägg och design. Hypotesen visade sig dock vara felaktig för webbplatserna skilde sig enormt från varandra både innehålls- och kvalitetsmässigt. Det var endast Domingos webbplats jag tyckte höll måttet. De andra två verkar inte genomsyras av medvetna och förträffliga designbeslut.
+
+Jag anser att arbetet var lärorikt ändå. Ibland kan man lära sig mer av att analysera dålig design: det är lättare att undvika någonting man tycker är uselt än att efterlikna grafiska mästervärk (vilket i mitt fall skulle nog vara överkurs).
+
+## Krav 3: Webbplats
+
+Jag valde att skapa en webbplats åt kund nr 3, Bew Gorp. I stället för att installera ett helt nytt projekt från grunden från exempelmappen tog jag en kopia på redovisamappen och plockade bort de filer som inte behövdes. På så sätt kunde jag återanvända en hel del kod från tidigare kursmoment.
+
+I enighet med kravspecen har webbplatsen allt som krävs: en favicon, en logo, en flashbild, multipla kolumner på förstasidan, en meny, en blogg med tre blogginlägg osv. På en punkt (där det står att man ska använda Cimage för att få rätt storlek på bilderna) valde jag dock att avvika från specen för det visade sig hindra arbetet med sidans responsivitet. Istället så använde jag Cimage för att rotera bilderna, förse dem med bakgrundsfärg och för att manipulera deras färger.
+
+Webbplatsen är anpassad till mindre enheter: mina media queries (som ligger i en egen LESS-modul) är kopplade till tre brytpunkter (750px, 950px och 1100px).
+
+Jag valde att framställa Bew som en halvanonym, blivande hackare så hans kontaktuppgifter syns i footern endast då man hovrar över bilden i mitten. Jag la ner en del arbete på att ta fram originella blogginlägg som passar Bews profil.
+
+## Krav 4: Tema
+
+Webbplatsens standardtema präglas av ett akromatiskt färgschema med en blå accentfärg. Regioner med olika innehåll är klart avgränsade från varandra vilket gör det lätt att ta till sig sidans budskap. Det mest centrala med temat (så som jag upplever det) är att innehållet är presenterat i ränder med växlande bakgrundsfärger. Allt detta bidrar (förhoppningsvis) till att sajten inger en känsla av förtroende, lugn och stabilitet.
+
+Valet av typsnitt och bilder syftar också till att skapa ett originellt och personligt tema som följer webbstandarderna i sitt upplägg men sticker ändå ut på sitt eget sätt.
+
+När besökaren minskar på webbläsarens bredd ändras utseendet längs tre brytpunkter. Det som förändras mest är elementens padding, margin, display, radhöjd och text-align.
+
+Temat beskrivs utförligare på projektets [om-sida](../../proj/htdocs/om).
+
+## Krav 5: Alternativt tema
+
+Webbplatsens alternativa tema skiljer sig från standardtemat när det gäller färgpalett, typografi, layout och designprinciper. Sidans färgpalett är en kombination av ett vanligt akromatiskt och ett grönaktigt monokromatiskt färgschema. Tack vare vissa inslag av opacitet framstår den gröna tonen som dominant. mestadels grönaktig. Rörelse är ett centralt begrepp för temat och finns med på webbplatsen dels i form av en animation men också som effekten av scrollning då halvtransparenta, randiga element förskjuts över element som har ett fixerat bakgrundsmönster. Det alternativa temats runda former står i kontrast med standardtemats mestadels kvadratiska utseende. Temat är snarare av experimentell karaktär då jag har lekt med mera avancerade (eller i alla fall för mig nya) CSS-attribut och konstruktioner.
+
+## Krav 6: Temats dokumentation
+
+När jag skulle börja med dokumentationen fick jag inse att koden bakom temat inte var organiserad på ett optimalt sätt. Det var definitivt inte någonting man kunde skryta med på sin dokumentationssida. Tidigare nöjde jag mig med att koden fungerade som jag ville men nu var det dags att snygga till den. Jag såg till att nästla de kodkonstruktioner som hörde ihop, ersatte vissa vanligt förekommande värden med nyskapade variabler, använde av mig av inbyggda LESS-funktioner och strukturerade om koden för att undvika repetition. Detta gällde särskilt mitt alternativa tema som i grund och botten bygger på standardtemat.
+
+Nu har jag alltså mycket mindre kod i Tema nr 2. Stilreglerna är nästlade, bygger på variabler och funktioner samt är organiserade i moduler. Jag har separata moduler för headern, footern och content men också för responsivitet och för stilreglerna som rör de grundläggande elementselektorerna.
+
+## Om projektet
+
+Jag tycker att projektet var en rimlig avslutning på kursen. Det gick att återanvända en hel del kod från tidigare kmom. Under arbetets gång stötte jag på vissa problem som tog en del tid att lösa, men i stort sett flöt den tekniska biten på ganska bra. Det som tog mest tid var att komma på själva upplägget genom att experimentera med olika skisser (på en enda HTML-sida samt en tillhörande stilmall). När jag tyckte mig ha hittat rätt upplägg flyttade jag koden till ramverket.
+
+Jag fick dock inse att markupen som genererades av ramverket inte var helt förenligt med mitt ursprungliga upplägg, så jag fick krångla till det lite grann. Nu är markupen onödigt komplicerad på sina håll.
+
+Uppskattningsvis tog projektet över 70 timmar att klara. När man arbetar med ett binärt sökträd vet man när man är klar, men när det gäller design och front end kan man hålla på i all evighet utan att man känner sig riktigt nöjd med resultatet. Det är troligen en av anledningarna till att jag föredrar programmering framför design och CSS.
+
+## Mina tankar om kursen
+
+I och med att jag nu lämnar in kmom10 i maj (i stället för i januari) kan jag jämföra kursen med alla andra som ges i årskurs 1. För mig tycks designkursen ha varit svårast av alla. För det första är det minst sagt överväldigande att komma till rätta med ramverket. Det är dock mödan värt särskilt med tanke på att programmet rymmer ytterligare två ramverkskurser. Så trots att jag tyckte annorlunda i november så inser jag att det är så det ska vara.
+
+Det finns möjligen ett och annat man skulle kunna skära ner på. Förslagsvis skulle man kunna jobba med gridet på ett annat sätt. Det kanske räcker att nämna det i förbigående. Även med facit i hand tycker jag att det i vissa fall (särskilt om man gillar att centrera innehållet) innebär mera begränsningar än fördelar att arbeta gridbaserat.
+
+En annan sak som gjorde kursen svårare för mig (förutom att jag saknar känsla för design) var att det finns oändligt många detaljer att ta hänsyn till när man arbetar exempelvis med responsivitet och det är mest ens ork som sätter stopp för hur många brytpunkter och detaljer man väljer att arbeta med. Som jag nämnde ovan är det lättare för mig att implementera konkret funktionalitet via en programmeringsövning än att [pilla på CSS-koden](https://giphy.com/gifs/css-13FrpeVH09Zrb2/fullscreen).
+
+Jag tycker att allt som togs upp i kursen är väldigt relevant och nyttigt. Jag fick bra handledning vid eventuella frågor, lärartemaet har varit väldigt hjälpsamma. Men med tanke på hur pass överväldigande och kämpigt kursen har varit får den 9 poäng av 10.
